--- a/frontend/src/pages/Playlist/styles.scss
+++ b/frontend/src/pages/Playlist/styles.scss
@@ -1,195 +1,174 @@
 @use '@/styles/variables.scss' as *;
 
-#select {
-  position: relative;
-  width: 97%;
-  padding-top: 2.3rem;
-  padding-right: 1em;
-  text-align: right;
-  visibility: hidden;
-}
+#main {
+  max-width: 992px;
+  margin: 4rem auto 3rem;
+  padding: 1.5rem;
+  box-shadow: 0 4px 12px rgba(255, 255, 255, 0.15);
+  transform: translateY(0.5rem);
 
-.group {
   .game {
-    $gap: 16px;
-
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding: $gap;
+    min-height: 200px;
+    margin-bottom: 1rem;
+    padding-bottom: 1rem;
 
-    .card {
+    >img {
       width: 200px;
-      height: 285px;
-      margin: calc($gap / 2);
-      border-radius: 8px;
-
-      > img {
-        display: block;
-        width: 200px;
-        height: 200px;
-        margin-bottom: 8px;
-        border-radius: 8px;
-        cursor: pointer;
-      }
-
-      > a {
-        display: -webkit-box;
-        -webkit-box-orient: vertical;
-        -webkit-line-clamp: 3;
-        overflow: hidden;
-        font-size: 1.1rem;
-        text-overflow: ellipsis;
-        word-break: break-word;
-        max-height: calc(1.1rem * 3 * 1.5);
-        cursor: pointer;
-      }
+      height: 200px;
     }
-  }
-}
 
-#sort-select {
-  $width: 36px;
-
-  position: absolute;
-  left: 8px;
-  top: 0;
-  z-index: 9;
-  transform: translateX(-50%) translateY(-36px);
-  display: flex;
-  align-items: center;
-  width: $width;
-  height: $width;
-  border-radius: 50%;
-  background-color: $sideNav-bgColor;
-  cursor: pointer;
-
-  > span {
-    flex: 1;
-
-    .svg-icon {
-      color: $root-bgColor;
-      transform: translateY(2px);
-    }
-  }
-
-  > div {
-    display: none;
-    position: absolute;
-    right: 0;
-    padding-right: $width * 1.2;
-    transition: all 0.3s ease;
-
-    > ul {
-      border-radius: 8px;
-      border: 3px solid $sideNav-bgColor;
-      padding: 0.5em 2.2em 0.5em 2em;
-      background-color: $root-bgColor;
-      box-shadow: 0 0 5px 2px rgba($root-bgColor, 0.7);
-      color: $sideNav-bgColor;
+    >div {
+      flex: 1;
+      padding-left: 2rem;
       text-align: left;
-      font-weight: bold;
-      font-size: 0.8em;
+    }
+  }
 
-      > li {
-        position: relative;
-        text-indent: 1.1em;
-        line-height: 2.5em;
-        white-space: nowrap;
+  .tabs {
+    display: flex;
+    margin-bottom: 0.5rem;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.5);
 
-        &.active {
-          span:before {
-            content: '√';
-            position: absolute;
-            left: -1.5em;
-          }
-        }
+    .tab {
+      flex: 1;
+      border-bottom: 1px solid rgba(128, 128, 128, 0.5);
+      padding: 10px 20px;
+      opacity: 0.3;
+      cursor: pointer;
 
-        &:not(.active, :hover) {
-          span {
-            opacity: 0.5;
-          }
-        }
+      &.active {
+        opacity: 1;
+        font-weight: bold;
+      }
+
+      &.blank {
+        visibility: hidden;
       }
     }
   }
 
-  &:hover {
-    box-shadow: 0 0 5px 0 $sideNav-bgColor;
+  :deep(.detail) {
+    padding-top: 0.8rem;
+    text-align: left;
 
-    > div {
-      display: block;
+    ol {
+      >li {
+        display: flex;
+        padding: 0.5rem 0;
+
+        >div {
+          &:first-child {
+            width: 200px;
+            height: 100px;
+
+            >img {
+              height: 100px;
+              margin: 0 auto;
+            }
+          }
+
+          &:last-child {
+            flex: 1;
+            padding-left: 1rem;
+
+            h4 {
+              position: relative;
+              padding-right: 3em;
+            }
+          }
+        }
+
+        &.hidden {
+          display: none;
+        }
+      }
     }
+
+    .radio-group {
+      margin-bottom: 1.5em;
+      text-align: right;
+    }
+  }
+
+  :deep(img) {
+    display: block;
+    cursor: pointer;
+  }
+
+  h2,
+  :deep(h4) {
+    margin: 0 0 0.5rem;
+
+    small {
+      display: inline-block;
+      opacity: 0.4;
+    }
+  }
+
+  :deep(ul) {
+    >li {
+      margin: 0 0 0.2rem;
+      font-size: 0.9rem;
+
+      >b {
+        display: inline-block;
+        width: 3.5rem;
+      }
+    }
+  }
+
+  :deep(ul) {
+    margin-top: 0;
+    opacity: 0.5;
+    font-size: 0.8rem;
   }
 }
 
 @media (prefers-color-scheme: light) {
-  #sort-select {
-    background-color: $sideNav-bgColor-light;
-
-    > span {
-      .svg-icon {
-        color: $root-bgColor-light;
-      }
-    }
-
-    > div {
-      > ul {
-        border-color: $sideNav-bgColor-light;
-        box-shadow: 0 0 5px 2px rgba($root-bgColor-light, 0.3);
-        background-color: $root-bgColor-light;
-        color: $sideNav-bgColor-light;
-      }
-    }
-
-    &:hover {
-      box-shadow: 0 0 5px 0 $sideNav-bgColor-light;
-    }
+  #main {
+    box-shadow: 0 0 12px rgba(0, 0, 0, 0.15);
   }
 }
 
 @media (max-width: 767px) {
-  #select {
-    width: 100%;
-    padding-top: 3.5rem;
-    padding-bottom: 0.5rem;
-    visibility: visible;
-  }
-
-  .group {
-    h3 {
-      font-size: smaller;
-    }
+  #main {
+    margin-top: 2rem;
+    margin-bottom: 0;
+    padding: 1rem;
+    box-shadow: none !important;
+    font-size: 0.7rem;
 
     .game {
-      display: block;
+      min-height: 90px;
+      padding-bottom: 0;
 
-      .card {
-        display: flex;
-        align-items: center;
-        width: 100%;
-        height: 50px;
-        text-align: left;
+      >img {
+        width: 80px;
+        height: 80px;
+      }
 
-        > img {
-          display: inline-block;
-          width: 50px;
-          height: 50px;
-          margin-bottom: 8px;
-          border-radius: 8px;
-          cursor: pointer;
-        }
+      >div {
+        padding-left: 1rem;
+      }
+    }
 
-        a {
-          flex: 1;
-          display: block;
-          margin: 0 1rem 0.5rem;
-          font-size: 0.9rem;
-          white-space: nowrap;
-          overflow: hidden;
-          text-overflow: ellipsis;
+    :deep(.detail) {
+      ol {
+        >li {
+          >div:first-child {
+            display: none !important;
+          }
         }
       }
+    }
+
+    :deep(h4) {
+      font-size: 0.8rem;
+    }
+
+    :deep(ul) {
+      display: none;
     }
   }
 }
