--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -1,4 +1,5 @@
 @use '@/styles/variables.scss' as *;
+@use '@/styles/custom.scss' as *;
 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -67,47 +68,5 @@ ol {
 @media (min-width: 1200px) {
   #app {
     width: 1200px;
-  }
-}
-
-.prefix-text {
-  display: flex;
-}
-
-.radio-group {
-  label {
-    display: inline-flex;
-    align-items: center;
-    margin-right: 1.5em;
-    cursor: pointer;
-
-    input[type='radio'] {
-      margin: 0;
-
-      + span {
-        display: inline-block;
-        opacity: 0.5;
-        font-weight: bolder;
-        font-size: 0.8em;
-        text-indent: 0.5em;
-      }
-
-      &:checked {
-        + span {
-          opacity: 1;
-        }
-      }
-    }
-
-    &.disabled {
-      cursor: default;
-      pointer-events: none;
-
-      input[type='radio'] {
-        + span {
-          opacity: 0.25;
-        }
-      }
-    }
   }
 }
