--- a/frontend/src/styles/custom.scss
+++ b/frontend/src/styles/custom.scss
@@ -72,6 +72,7 @@
           display: inline-block;
           margin-top: .5em;
           opacity: 0.4;
+          font-size: 0.8em;
         }
       }
 
