--- a/frontend/src/styles/variables.scss
+++ b/frontend/src/styles/variables.scss
@@ -7,7 +7,7 @@ $root-textColor-light: #213547;
 
 /* --------- header --------- */
 
-$header-bgColor: red;
+$header-bgColor: #E60012;
 $header-textColor: white;
 $header-bgColor-detail: #dcdbdb;
 $header-textColor-detail: #958889;
@@ -25,4 +25,4 @@ $footer-bgColor-light: #eee;
 
 $sideNav-bgColor: #c4c4c4;
 
-$sideNav-bgColor-light: red;
+$sideNav-bgColor-light: #E60012;
