--- a/frontend/src/pages/Game/Detail/styles.scss
+++ b/frontend/src/pages/Game/Detail/styles.scss
@@ -38,6 +38,7 @@
       padding: 10px 20px;
       opacity: 0.3;
       font-size: 1rem;
+      white-space: nowrap;
       cursor: pointer;
 
       &.active {
@@ -64,7 +65,7 @@
 
 @media (max-width: 767px) {
   #main {
-    margin-top: 2rem;
+    margin-top: 2.5rem;
     margin-bottom: 0;
     padding: 1rem;
     box-shadow: none !important;
