--- a/frontend/src/pages/Game/List/styles.scss
+++ b/frontend/src/pages/Game/List/styles.scss
@@ -1,5 +1,3 @@
-@use '@/styles/variables.scss' as *;
-
 #select {
   position: relative;
   width: 97%;
@@ -37,7 +35,7 @@
           margin-bottom: 8px;
           border-radius: 8px;
           cursor: pointer;
-          transition: all 0.3s ease;
+          @include transition(transform)
         }
 
         > span {
