--- a/frontend/src/styles/custom.scss
+++ b/frontend/src/styles/custom.scss
@@ -1,3 +1,6 @@
+@use '@/styles/variables.scss' as *;
+@use '@/styles/mixins.scss' as *;
+
 .radio-group {
   label {
     display: inline-flex;
@@ -12,7 +15,7 @@
         display: inline-block;
         opacity: 0.5;
         font-weight: bolder;
-        font-size: 0.8em;
+        font-size: 0.9em;
         text-indent: 0.5em;
       }
 
