--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -1,5 +1,5 @@
 @use '@/styles/variables.scss' as *;
-@use '@/styles/custom.scss' as *;
+@use '@/styles/mixins.scss' as *;
 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
