--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -1,5 +1,6 @@
-@use '@/styles/variables.scss' as *;
-@use '@/styles/mixins.scss' as *;
+@use '@/styles/variables' as *;
+@use '@/styles/mixins' as *;
+@use '@/styles/common' as *;
 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
