--- a/frontend/src/pages/Playlist/Detail/styles.scss
+++ b/frontend/src/pages/Playlist/Detail/styles.scss
@@ -1,115 +1,32 @@
-#main {
-  max-width: 992px;
-  margin: 4rem auto 3rem;
-  padding: 1.5rem;
-  box-shadow: 0 4px 12px rgba(255, 255, 255, 0.15);
-  transform: translateY(0.5rem);
+.detail {
+  border-top: 1px solid rgba(128, 128, 128, 0.5);
 
-  > .common-detail {
-    min-height: 200px;
-    margin-bottom: 1rem;
-    padding-bottom: 1rem;
+  h2 {
+    font-size: 1.1rem;
+    text-align: left;
 
-    > div {
-      &.detail-image {
-        > img {
-          width: 200px;
-          height: 200px;
-        }
-      }
+    > a {
+      display: flex;
+      align-items: center;
+      background: linear-gradient(to right, rgba(#929292, 0.3) 0%, rgba(#929292, 0) 100%);
 
-      &.detail-text {
-        padding-left: 2rem;
-
-        > .text-main {
-          > .text-desc {
-            display: block;
-            margin-top: 0.5em;
-            font-weight: normal;
-            font-size: 0.6em;
-
-            &:empty {
-              display: none;
-            }
-          }
-        }
+      > img {
+        width: 50px;
+        height: 50px;
+        margin-right: 1em;
       }
     }
-  }
-
-  .detail {
-    margin-top: 1.8rem;
-    border-top: 1px solid rgba(128, 128, 128, 0.5);
-    padding-top: 0.8rem;
-
-    > h2 {
-      font-size: 1.1rem;
-      text-align: left;
-
-      > a {
-        display: flex;
-        align-items: center;
-        background: linear-gradient(
-          to right,
-          rgba(#929292, 0.3) 0%,
-          rgba(#929292, 0) 100%
-        );
-
-        > img {
-          width: 50px;
-          height: 50px;
-          margin-right: 1em;
-        }
-      }
-    }
-  }
-}
-
-@media (prefers-color-scheme: light) {
-  #main {
-    box-shadow: 0 0 12px rgba(0, 0, 0, 0.15);
   }
 }
 
 @media (max-width: 767px) {
-  #main {
-    margin-top: 2.5rem;
-    margin-bottom: 0;
-    padding: 1rem;
-    box-shadow: none !important;
-    font-size: 0.7rem;
-
-    > .common-detail {
-      min-height: 90px;
-      padding-bottom: 0;
-
-      > div {
-        &.detail-image {
-          display: block !important;
-          width: initial;
-
-          > img {
-            width: 80px;
-            height: 80px;
-          }
-        }
-
-        &.detail-text {
-          padding-left: 1rem;
-
-          > .text-main {
-            > .text-desc {
-              font-size: 0.7em;
-            }
-          }
-        }
-      }
-    }
-
-    .detail {
-      > h2 {
-        font-size: 1rem;
-      }
+  .detail {
+    h2 {
+      font-size: 1rem;
     }
   }
+}
+
+.text-else {
+  display: block !important;
 }
